# cigate

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  contributing.md  index.md
src/cigate/: __init__.py
src/cigate/cli/: main.py
tests/: test_cigate.py
